--- a/index.html
+++ b/index.html
@@ -154,5 +154,78 @@ de elementos HTML.
    <img src="img.jpg" style="width:50px;height:100px">
  </div>
 </div>
+<h1>Segundo Parcial</h1>
+<h2>HTML IFRAMES</h2>
+Una etiqueta html iframe es utilizada para visualizar una pagin dentro de orientados dentro de otra <br>
+sintaxis:<br>
+&lt;iframe src=/pagina2.html title="descripcion"&gt;&lt;/iframe&gt;
+<h2>clases ccs </h2>
+EL atributoi class  en html permite asignar un nombre de identificador a una etiqueta html con la finalidad
+de localizarla  en una hija de estilos(ccs).Una clase se le puede asignar a varias etiquetas.<br>
+<h2>Atributo id</h2> 
+EL atributoi class  en html permite asignar un nombre de identificador a una etiqueta html con la finalidad
+de localizarla  en una hija de estilos(ccs).Solamnete un elemento html puede tener un id.
+<h2>Formas de usa estilos</h2>
+in line: la misma linea<br>
+etiquta style:<br>
+archivo css 
+<h2>Border en ccs</h2>
+La propiedad border ccs nos permite espacificar su estilo su ancho/resource color y diferentes posiciones
+<h2>margen</h2>
+son utilizados para que halla un espacio alrededor de los elementos html.
+<h2>padding</h2>
+Es utilizados para crear un espacio alrededor de los elementos en al interior de una etiqueta
+<h2>display</h2>
+es la propiedad más importante de ccs la propiedad display es usada para espcificar como un elemento
+debe buscarse sobre la pagina cada elemento en html tiene un valor por defecto en display dependiendo
+del elemento en la mayoria de elemetos en vlog o in ine.
+<h2>Elementos block level</h2>
+Son los elementos son los que ocupan un espacio de ancho con base al espacio disponible
+"h1..-form-heather-footer"
+<h2>in line</h2>
+Son los elementos que inician en una nueva linea al usarlas y unicamente toman el tamaño que requieren
+img-span-href-
+<h2>in line</h2>
+puedes crar un elemento sobre la misma linea el blck puede crear un elemento en el mismo bloque
+<h2>Contents</h2> 
+permite al contenedor desaparecer haciendo que los elementos hijo suben de nivel en dom(document object model)
+<h2>Flex</h2>
+Muestra un contenedor visible y vuelve a todos sus elementos hijo elementos inline 
+<h2> display grid</h2>
+se utiliza para crar un contenedor de cuadricula lo que activa en sus elementos hijo directo se 
+  va activar.
+<h2>in line flex</h2>
+domina las caracteristicas de los elementos inline y flex 
+<h>Inline grid</h>
+domina las caracteristicas de los elementos inline grid
+<h2>inline table</h2>
+permite que los elementos se comporten sobre las caracteristicas de los elemento in line sobre un tabla.
+<h2>list item</h2>
+Se utiliza para convertir los elementos en una lista similar a li
+<h2>run-in</h2>
+se utiliza para especificar como un elemento se debe integrar al elemento siguente.
+<h2>table</h2>
+permite que el contenedor y sus elemntso hijos se comporten como una tabla.
+<h2>Table caption</h2>
+se utiliza para estableser un elemento como el titulo de una tabla
+<h2>Table colum group</h2>
+se utiliza para estableser un elemento como una columna dentro de ua table
+<h2>table header group</h2>
+se utiliza para estableser un elemento como
+ un grupo de encabezados.
+ <h2>tablafootergroup</h2>
+ pie de tabla
+ <h2>tablerowgroup</h2>
+ gurpo de filas dentro de una tabla
+ <h2>table cell</h2>
+ celda dentro de una tabla
+ <h2>table column</h2>
+ columna dentro de una tabla
+ <h2>none</h2>
+ para que se oculte dentra de la tabla
+ <h2>Initial</h2>
+ estblaser la porpiedad display a su valor inicial
+ <h2>inherit</h2>
+ se utiliza para la propiedad display del elemento padre
 </body>
 </html>
